--- a/website-features.html
+++ b/website-features.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="You will find embedded in the text five different types of boxes which serve different purposes: Some explanations that will hopefully make your work with this webpage or learning the material...">
-<meta property="og:description" content="You will find embedded in the text five different types of boxes which serve different purposes: Some explanations that will hopefully make your work with this webpage or learning the material...">
-<meta name="twitter:description" content="You will find embedded in the text five different types of boxes which serve different purposes: Some explanations that will hopefully make your work with this webpage or learning the material...">
+<meta name="description" content="You will find embedded in the text five different types of boxes which serve different purposes: These boxes contain important definitions relating to the methods we explore in this companion. You...">
+<meta property="og:description" content="You will find embedded in the text five different types of boxes which serve different purposes: These boxes contain important definitions relating to the methods we explore in this companion. You...">
+<meta name="twitter:description" content="You will find embedded in the text five different types of boxes which serve different purposes: These boxes contain important definitions relating to the methods we explore in this companion. You...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -126,20 +126,20 @@
 <h1>Website Features<a class="anchor" aria-label="anchor" href="#website-features"><i class="fas fa-link"></i></a>
 </h1>
 <p>You will find embedded in the text five different types of boxes which serve different purposes:</p>
+<div class="def">
+<p>These boxes contain important definitions relating to the methods we explore in this companion. You can also click on <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-6.html">glossary entries</a></span> in the text to take you to the relevant glossary section of the companion.</p>
+</div>
 <div class="bulb">
 <p>Some explanations that will hopefully make your work with this webpage or learning the material itself easier.</p>
 </div>
-<div class="def">
-<p>These boxes contain important definitions relating to the methods we explore in this companion. You can also click on <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-6.html">glossary entries</a></span> in the text to take you to the relevant glossary section of the companion.</p>
+<div class="video">
+<p>To support you in learning the material we cover in this online companion, I have recorded videos for some central terms and topics.</p>
 </div>
 <div class="puzzle">
 <p>A brief question which tests your understanding of the previous material.</p>
 </div>
 <div class="warning">
 <p>Here you need to be careful when working with R to avoid problems.</p>
-</div>
-<div class="video">
-<p>To support you in learning the material we cover in this online companion, I have recorded videos for some central terms and topics.</p>
 </div>
 </div>
   <div class="chapter-nav">
