--- a/consolidation.html
+++ b/consolidation.html
@@ -136,7 +136,70 @@
 <p>The survey, which started in 1981, seeks to use the most rigorous, high-quality research designs in each country. The WVS consists of nationally representative surveys conducted in almost 100 countries which contain almost 90 percent of the world?s population, using a common questionnaire. The WVS is the largest non-commercial, cross-national, time series investigation of human beliefs and values ever executed, currently including interviews with almost 400,000 respondents. Moreover the WVS is the only academic study covering the full range of global variations, from very poor to very rich countries, in all of the world’s major cultural zones.</p>
 </blockquote>
 <p>The WVS has taken place across six waves, each collecting data from a different set of countries:</p>
-<div class="inline-figure"><img src="files/Week%205/waves.png" width="20%" style="display: block; margin: auto;"></div>
+<p> </p>
+<div class="custom-html-table" style="width: 30%; margin: 0 auto;">
+<div class="inline-table"><table style="width: 100%; border-collapse: collapse; text-align: center; font-family: sans-serif; font-size: 0.9em;" class="table table-sm">
+<thead><tr>
+<th style="padding: 4px 6px;">
+Wave
+</th>
+<th style="padding: 4px 6px;">
+Year
+</th>
+</tr></thead>
+<tbody>
+<tr>
+<td style="padding: 4px 6px;">
+Wave 1
+</td>
+<td style="padding: 4px 6px;">
+1981-1984
+</td>
+</tr>
+<tr>
+<td style="padding: 4px 6px;">
+Wave 2
+</td>
+<td style="padding: 4px 6px;">
+1990-1994
+</td>
+</tr>
+<tr>
+<td style="padding: 4px 6px;">
+Wave 3
+</td>
+<td style="padding: 4px 6px;">
+1995-1998
+</td>
+</tr>
+<tr>
+<td style="padding: 4px 6px;">
+Wave 4
+</td>
+<td style="padding: 4px 6px;">
+1999-2004
+</td>
+</tr>
+<tr>
+<td style="padding: 4px 6px;">
+Wave 5
+</td>
+<td style="padding: 4px 6px;">
+2005-2009
+</td>
+</tr>
+<tr>
+<td style="padding: 4px 6px;">
+Wave 6
+</td>
+<td style="padding: 4px 6px;">
+2010-2014
+</td>
+</tr>
+</tbody>
+</table></div>
+</div>
+<p> </p>
 </div>
 </div>
   <div class="chapter-nav">
