--- a/markov-transition-models.html
+++ b/markov-transition-models.html
@@ -129,6 +129,7 @@
 <h2>Time Series, Cross-Sectional Data<a class="anchor" aria-label="anchor" href="#time-series-cross-sectional-data"><i class="fas fa-link"></i></a>
 </h2>
 <p>We are now entering the real world, as we will start to look at how characteristics vary, not only across different countries, but also across time. I have already presented the structure of time-series, cross-sectional (TSCS) data in Week 1, but to jog your memory, here it is again:</p>
+<div class="custom-html-table">
 <div class="inline-table"><table style="width:40%; color: black; margin-left: auto; margin-right: auto;" class="table">
 <caption>
 <span id="tab:tscs7">Table 10: </span>Schematic: Time-Series, Cross-Sectional Data
@@ -235,6 +236,7 @@ B
 </tr>
 </tbody>
 </table></div>
+</div>
 <p>As you can see, each country has multiple observations, one for each year in which data have been observed. We will be using this information this week to calculate probabilities of regime transitions. For example, what is the probability of a country to transition from autocracy to democracy? As we only observe the regime type once for each year, this question alludes to the difference in regime type between two years in the same country. We will do this with a so-called Markov Transition Model.</p>
 <hr>
 </div>
