--- a/model-building.html
+++ b/model-building.html
@@ -155,8 +155,8 @@
 
     <script>
 
-      function styleCell_bx1swazbl234j891ae1c(i, j, css_id) {
-          var table = document.getElementById("tinytable_bx1swazbl234j891ae1c");
+      function styleCell_3epefudb2i13z7ka7n3h(i, j, css_id) {
+          var table = document.getElementById("tinytable_3epefudb2i13z7ka7n3h");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -166,7 +166,7 @@
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_bx1swazbl234j891ae1c');
+        var table = document.getElementById('tinytable_3epefudb2i13z7ka7n3h');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -174,8 +174,8 @@
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_bx1swazbl234j891ae1c(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_bx1swazbl234j891ae1c");
+      function spanCell_3epefudb2i13z7ka7n3h(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_3epefudb2i13z7ka7n3h");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -205,42 +205,38 @@
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 0, j: 2 }, { i: 0, j: 3 },  ], css_id: 'tinytable_css_1wgckww30vf5ofk062b3',}, 
-          { positions: [ { i: 10, j: 2 }, { i: 10, j: 1 }, { i: 10, j: 3 },  ], css_id: 'tinytable_css_crqrxz12te58l4xem3hr',}, 
-          { positions: [ { i: 7, j: 3 }, { i: 7, j: 2 }, { i: 7, j: 1 },  ], css_id: 'tinytable_css_mimjh0xyacapncqxsktk',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 4, j: 1 }, { i: 6, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 2 }, { i: 3, j: 3 }, { i: 2, j: 2 }, { i: 9, j: 3 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 9, j: 1 }, { i: 8, j: 2 }, { i: 2, j: 3 }, { i: 4, j: 3 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 8, j: 3 },  ], css_id: 'tinytable_css_xomurxz0gvgw1x6yejx5',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_3ao4ifbsq5y1bjcnn34n',}, 
-          { positions: [ { i: 1, j: 1 }, { i: 1, j: 3 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_fznhecqcip6vu600kj8b',}, 
-          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_yqpgujur50g0mwsewho6',}, 
-          { positions: [ { i: 7, j: 0 },  ], css_id: 'tinytable_css_up0mh0whpdaah87x9o8c',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 },  ], css_id: 'tinytable_css_cn3mo10gk4ar8xran4vx',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_5w95d2wehva97pxfh3r2',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_wyl1hz6wl35ul51v8tkn',}, 
+          { positions: [ { i: 0, j: 2 }, { i: 0, j: 3 },  ], css_id: 'tinytable_css_b0ow5uhabx1uvxs5c282',}, 
+          { positions: [ { i: 7, j: 1 }, { i: 7, j: 2 }, { i: 7, j: 3 },  ], css_id: 'tinytable_css_aaahr4avpjt6ca4pmxf8',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 5, j: 1 }, { i: 6, j: 1 }, { i: 3, j: 2 }, { i: 5, j: 2 }, { i: 2, j: 2 }, { i: 3, j: 3 }, { i: 4, j: 1 }, { i: 5, j: 3 }, { i: 6, j: 2 }, { i: 4, j: 2 }, { i: 2, j: 3 }, { i: 4, j: 3 }, { i: 6, j: 3 },  ], css_id: 'tinytable_css_oo1edfqpatgglmxa6okg',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_zkowb761ef2s2xzdlpad',}, 
+          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_kj8fijni1gxbpmyzzkdj',}, 
+          { positions: [ { i: 7, j: 0 },  ], css_id: 'tinytable_css_ry0yiqgfgqak4tdzvkfo',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 },  ], css_id: 'tinytable_css_6ebzmy3iymuhh4oqvc2h',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_8sf4efr1a4haby15e8aq',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_wlu73w2n63lsvzdc6rct',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_bx1swazbl234j891ae1c(cell.i, cell.j, group.css_id);
+                  styleCell_3epefudb2i13z7ka7n3h(cell.i, cell.j, group.css_id);
               });
           });
       });
     </script><style>
       /* tinytable css entries after */
-      .table td.tinytable_css_1wgckww30vf5ofk062b3, .table th.tinytable_css_1wgckww30vf5ofk062b3 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_crqrxz12te58l4xem3hr, .table th.tinytable_css_crqrxz12te58l4xem3hr { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_mimjh0xyacapncqxsktk, .table th.tinytable_css_mimjh0xyacapncqxsktk { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_xomurxz0gvgw1x6yejx5, .table th.tinytable_css_xomurxz0gvgw1x6yejx5 { text-align: center; }
-      .table td.tinytable_css_3ao4ifbsq5y1bjcnn34n, .table th.tinytable_css_3ao4ifbsq5y1bjcnn34n { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_fznhecqcip6vu600kj8b, .table th.tinytable_css_fznhecqcip6vu600kj8b { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_yqpgujur50g0mwsewho6, .table th.tinytable_css_yqpgujur50g0mwsewho6 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_up0mh0whpdaah87x9o8c, .table th.tinytable_css_up0mh0whpdaah87x9o8c { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_cn3mo10gk4ar8xran4vx, .table th.tinytable_css_cn3mo10gk4ar8xran4vx { text-align: left; }
-      .table td.tinytable_css_5w95d2wehva97pxfh3r2, .table th.tinytable_css_5w95d2wehva97pxfh3r2 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_wyl1hz6wl35ul51v8tkn, .table th.tinytable_css_wyl1hz6wl35ul51v8tkn { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_b0ow5uhabx1uvxs5c282, .table th.tinytable_css_b0ow5uhabx1uvxs5c282 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_aaahr4avpjt6ca4pmxf8, .table th.tinytable_css_aaahr4avpjt6ca4pmxf8 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_oo1edfqpatgglmxa6okg, .table th.tinytable_css_oo1edfqpatgglmxa6okg { text-align: center; }
+      .table td.tinytable_css_zkowb761ef2s2xzdlpad, .table th.tinytable_css_zkowb761ef2s2xzdlpad { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_kj8fijni1gxbpmyzzkdj, .table th.tinytable_css_kj8fijni1gxbpmyzzkdj { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_ry0yiqgfgqak4tdzvkfo, .table th.tinytable_css_ry0yiqgfgqak4tdzvkfo { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_6ebzmy3iymuhh4oqvc2h, .table th.tinytable_css_6ebzmy3iymuhh4oqvc2h { text-align: left; }
+      .table td.tinytable_css_8sf4efr1a4haby15e8aq, .table th.tinytable_css_8sf4efr1a4haby15e8aq { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_wlu73w2n63lsvzdc6rct, .table th.tinytable_css_wlu73w2n63lsvzdc6rct { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
 <div class="container">
-      <div class="inline-table"><table class="table table-borderless" id="tinytable_bx1swazbl234j891ae1c" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <div class="inline-table"><table class="table table-borderless" id="tinytable_3epefudb2i13z7ka7n3h" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
 <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -255,7 +251,7 @@
                 <th scope="col">Full</th>
               </tr>
 </thead>
-<tfoot><tr><td colspan="4">+ p </td></tr></tfoot>
+<tfoot><tr><td colspan="4">+ p &lt; 0.1, * p &lt; 0.1, ** p &lt; 0.05, *** p &lt; 0.01</td></tr></tfoot>
 <tbody>
 <tr>
 <td>per capita GDP</td>
@@ -293,24 +289,6 @@
                   <td>(3.691)</td>
                   <td>(4.350)</td>
                 </tr>
-<tr>
-<td>Num.Obs.</td>
-                  <td>155</td>
-                  <td>156</td>
-                  <td>155</td>
-                </tr>
-<tr>
-<td>R2</td>
-                  <td>0.068</td>
-                  <td>0.074</td>
-                  <td>0.090</td>
-                </tr>
-<tr>
-<td>R2 Adj.</td>
-                  <td>0.062</td>
-                  <td>0.068</td>
-                  <td>0.078</td>
-                </tr>
 </tbody>
 </table></div>
 </div>
@@ -337,7 +315,6 @@
 <li>
 <a href="https://warwick.summon.serialssolutions.com/#!/search/document?pn=1&amp;ho=t&amp;include.ft.matches=f&amp;fvf=ContentType,Newspaper%20Article,t%7CContentType,Book%20Review,t&amp;l=en-UK&amp;q=stinerock%20r&amp;id=FETCHMERGED-warwick_catalog_b396975143"><strong><span class="citation">Stinerock (2022)</span></strong></a>: Section 13.11</li>
 </ul>
-<hr>
 </div>
 </div>
   <div class="chapter-nav">
