--- a/glossary-3.html
+++ b/glossary-3.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Table 8: Glossary Week 4  Term  Description  control variables  A variable that is held constant or included in a statistical model to account for its potential influence, allowing clearer...">
-<meta property="og:description" content="Table 8: Glossary Week 4  Term  Description  control variables  A variable that is held constant or included in a statistical model to account for its potential influence, allowing clearer...">
-<meta name="twitter:description" content="Table 8: Glossary Week 4  Term  Description  control variables  A variable that is held constant or included in a statistical model to account for its potential influence, allowing clearer...">
+<meta name="description" content="   Table 8: Glossary Week 4  Term  Description  control variables  A variable that is held constant or included in a statistical model to account for its potential influence, allowing clearer...">
+<meta property="og:description" content="   Table 8: Glossary Week 4  Term  Description  control variables  A variable that is held constant or included in a statistical model to account for its potential influence, allowing clearer...">
+<meta name="twitter:description" content="   Table 8: Glossary Week 4  Term  Description  control variables  A variable that is held constant or included in a statistical model to account for its potential influence, allowing clearer...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -125,6 +125,8 @@
   </header><main class="col-sm-12 col-md-9 col-lg-7" id="content"><script src="sidebar-link.js"></script><div id="glossary-3" class="section level1 unnumbered">
 <h1>Glossary<a class="anchor" aria-label="anchor" href="#glossary-3"><i class="fas fa-link"></i></a>
 </h1>
+<p> </p>
+<div class="custom-html-table">
 <div class="inline-table"><table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table">
 <caption>
 <span id="tab:glossary4">Table 8: </span>Glossary Week 4
@@ -172,6 +174,8 @@ Refers to the principle “as many as necessary, as few as possible”
 </tr>
 </tbody>
 </table></div>
+</div>
+<p> </p>
 </div>
   <div class="chapter-nav">
 <div class="prev"><a href="homework-for-week-5.html">Homework for Week 5</a></div>
