--- a/linear-regression-application.html
+++ b/linear-regression-application.html
@@ -253,6 +253,15 @@ Figure 23: Visualisation of p-value
 </h3>
 <div class="inline-figure"><img src="files/Week%202/slope.png" width="75%" style="display: block; margin: auto;"></div>
 <p>The slope coefficient is shown in the row depicting the name of the independent variable, here “gdp”, and again the column “Estimate”. Our slope here, is <span class="math inline">\(1.386e-04\)</span>. The <span class="math inline">\(e-4\)</span> means that we have to move the decimal point 4 units to the left, so written fully, this means <span class="math inline">\(0.0001386\)</span>. We interpret it as follows: for every additional unit of per capita GDP, measured in US$, the Polity V score increases by <span class="math inline">\(0.0001386\)</span>, on average. This seems very small, but when you consider the size of GDP per capita in many countries, it seems logical that this value is as small as it is. If the coefficient was negative, then this would mean that for for every additional unit of per capita GDP, measured in US$, the Polity V score would decrease by <span class="math inline">\(0.0001386\)</span>, on average.</p>
+<div class="bulb">
+<p><strong>Interpreting a coefficient</strong></p>
+<p>The order in which to interpret a coefficient is as follows:</p>
+<ol style="list-style-type: decimal">
+<li>Is it significant? If not, all you can say is that there is no influence. You have falsified the alternative hypothesis.</li>
+<li>If it is significant, you can interpret its size and direction according to the statistical model (for example, slope coefficnet vs. partial slope coefficient).</li>
+<li>What does the coefficient mean for the hypothesis? Look at the direction. Is the direction as predicted by the hypothesis? Then you have evidence to support the hypothesis. If the direction is inverse, then you have falsified the hypothesis, even though you have a significant coefficient.</li>
+</ol>
+</div>
 </div>
 <div id="the-goodness-of-fit-r-squared" class="section level3 unnumbered">
 <h3>The Goodness of Fit (R-Squared)<a class="anchor" aria-label="anchor" href="#the-goodness-of-fit-r-squared"><i class="fas fa-link"></i></a>
