--- a/glossary-1.html
+++ b/glossary-1.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Table 4: Glossary Week 2  Term  Description  adjusted rsquared  The coefficient of determination for multiple regression.  autocorrelation  The value of one error term does not allow us to predict...">
-<meta property="og:description" content="Table 4: Glossary Week 2  Term  Description  adjusted rsquared  The coefficient of determination for multiple regression.  autocorrelation  The value of one error term does not allow us to predict...">
-<meta name="twitter:description" content="Table 4: Glossary Week 2  Term  Description  adjusted rsquared  The coefficient of determination for multiple regression.  autocorrelation  The value of one error term does not allow us to predict...">
+<meta name="description" content="   Table 4: Glossary Week 2  Term  Description  adjusted rsquared  The coefficient of determination for multiple regression.  autocorrelation  The value of one error term does not allow us to...">
+<meta property="og:description" content="   Table 4: Glossary Week 2  Term  Description  adjusted rsquared  The coefficient of determination for multiple regression.  autocorrelation  The value of one error term does not allow us to...">
+<meta name="twitter:description" content="   Table 4: Glossary Week 2  Term  Description  adjusted rsquared  The coefficient of determination for multiple regression.  autocorrelation  The value of one error term does not allow us to...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -125,6 +125,8 @@
   </header><main class="col-sm-12 col-md-9 col-lg-7" id="content"><script src="sidebar-link.js"></script><div id="glossary-1" class="section level1 unnumbered">
 <h1>Glossary<a class="anchor" aria-label="anchor" href="#glossary-1"><i class="fas fa-link"></i></a>
 </h1>
+<p> </p>
+<div class="custom-html-table">
 <div class="inline-table"><table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table">
 <caption>
 <span id="tab:glossary2">Table 4: </span>Glossary Week 2
@@ -412,6 +414,8 @@ The z-score, sometimes also referred to as z-value, expresses in units of standa
 </tr>
 </tbody>
 </table></div>
+</div>
+<p> </p>
 </div>
   <div class="chapter-nav">
 <div class="prev"><a href="homework-for-week-3.html">Homework for Week 3</a></div>
