--- a/glossary-2.html
+++ b/glossary-2.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Table 6: Glossary Week 3  Term  Description  attribute  A component or characteristic of a concept  background concept  The broad constellation of meanings and understandings associated with the...">
-<meta property="og:description" content="Table 6: Glossary Week 3  Term  Description  attribute  A component or characteristic of a concept  background concept  The broad constellation of meanings and understandings associated with the...">
-<meta name="twitter:description" content="Table 6: Glossary Week 3  Term  Description  attribute  A component or characteristic of a concept  background concept  The broad constellation of meanings and understandings associated with the...">
+<meta name="description" content="   Table 6: Glossary Week 3  Term  Description  attribute  A component or characteristic of a concept  background concept  The broad constellation of meanings and understandings associated with...">
+<meta property="og:description" content="   Table 6: Glossary Week 3  Term  Description  attribute  A component or characteristic of a concept  background concept  The broad constellation of meanings and understandings associated with...">
+<meta name="twitter:description" content="   Table 6: Glossary Week 3  Term  Description  attribute  A component or characteristic of a concept  background concept  The broad constellation of meanings and understandings associated with...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -125,6 +125,8 @@
   </header><main class="col-sm-12 col-md-9 col-lg-7" id="content"><script src="sidebar-link.js"></script><div id="glossary-2" class="section level1 unnumbered">
 <h1>Glossary<a class="anchor" aria-label="anchor" href="#glossary-2"><i class="fas fa-link"></i></a>
 </h1>
+<p> </p>
+<div class="custom-html-table">
 <div class="inline-table"><table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table">
 <caption>
 <span id="tab:glossary3">Table 6: </span>Glossary Week 3
@@ -236,6 +238,8 @@ An element of a conceptual component which varies. We also call these “measure
 </tr>
 </tbody>
 </table></div>
+</div>
+<p> </p>
 </div>
   <div class="chapter-nav">
 <div class="prev"><a href="homework-for-week-4.html">Homework for Week 4</a></div>
