--- a/glossary-4.html
+++ b/glossary-4.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Table 9: Glossary Week 5  Term  Description  Test  Test">
-<meta property="og:description" content="Table 9: Glossary Week 5  Term  Description  Test  Test">
-<meta name="twitter:description" content="Table 9: Glossary Week 5  Term  Description  Test  Test">
+<meta name="description" content="   Table 9: Glossary Week 5  Term  Description  Test  Test   ">
+<meta property="og:description" content="   Table 9: Glossary Week 5  Term  Description  Test  Test   ">
+<meta name="twitter:description" content="   Table 9: Glossary Week 5  Term  Description  Test  Test   ">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -125,6 +125,8 @@
   </header><main class="col-sm-12 col-md-9 col-lg-7" id="content"><script src="sidebar-link.js"></script><div id="glossary-4" class="section level1 unnumbered">
 <h1>Glossary<a class="anchor" aria-label="anchor" href="#glossary-4"><i class="fas fa-link"></i></a>
 </h1>
+<p> </p>
+<div class="custom-html-table">
 <div class="inline-table"><table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table">
 <caption>
 <span id="tab:glossary5">Table 9: </span>Glossary Week 5
@@ -146,6 +148,8 @@ Test
 </td>
 </tr></tbody>
 </table></div>
+</div>
+<p> </p>
 </div>
   <div class="chapter-nav">
 <div class="prev"><a href="homework-for-week-7.html">Homework for Week 7</a></div>
