--- a/glossary-5.html
+++ b/glossary-5.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Table 12: Glossary Week 7  Term  Description  dichotomous  Can only assume two mutually exclusive, but internally homogeneous qualitative categories">
-<meta property="og:description" content="Table 12: Glossary Week 7  Term  Description  dichotomous  Can only assume two mutually exclusive, but internally homogeneous qualitative categories">
-<meta name="twitter:description" content="Table 12: Glossary Week 7  Term  Description  dichotomous  Can only assume two mutually exclusive, but internally homogeneous qualitative categories">
+<meta name="description" content="   Table 12: Glossary Week 7  Term  Description  dichotomous  Can only assume two mutually exclusive, but internally homogeneous qualitative categories   ">
+<meta property="og:description" content="   Table 12: Glossary Week 7  Term  Description  dichotomous  Can only assume two mutually exclusive, but internally homogeneous qualitative categories   ">
+<meta name="twitter:description" content="   Table 12: Glossary Week 7  Term  Description  dichotomous  Can only assume two mutually exclusive, but internally homogeneous qualitative categories   ">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -125,6 +125,8 @@
   </header><main class="col-sm-12 col-md-9 col-lg-7" id="content"><script src="sidebar-link.js"></script><div id="glossary-5" class="section level1 unnumbered">
 <h1>Glossary<a class="anchor" aria-label="anchor" href="#glossary-5"><i class="fas fa-link"></i></a>
 </h1>
+<p> </p>
+<div class="custom-html-table">
 <div class="inline-table"><table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table">
 <caption>
 <span id="tab:glossary7">Table 12: </span>Glossary Week 7
@@ -146,6 +148,8 @@ Can only assume two mutually exclusive, but internally homogeneous qualitative c
 </td>
 </tr></tbody>
 </table></div>
+</div>
+<p> </p>
 </div>
   <div class="chapter-nav">
 <div class="prev"><a href="homework-for-week-8.html">Homework for Week 8</a></div>
