--- a/glossary.html
+++ b/glossary.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Table 3: Glossary Week 1  Term  Description    analysis  A detailed evaluation of data to discover their structure and relevant information to answer a research question  categorical  Describing...">
-<meta property="og:description" content="Table 3: Glossary Week 1  Term  Description    analysis  A detailed evaluation of data to discover their structure and relevant information to answer a research question  categorical  Describing...">
-<meta name="twitter:description" content="Table 3: Glossary Week 1  Term  Description    analysis  A detailed evaluation of data to discover their structure and relevant information to answer a research question  categorical  Describing...">
+<meta name="description" content="   Table 3: Glossary Week 1  Term  Description    analysis  A detailed evaluation of data to discover their structure and relevant information to answer a research question  categorical ...">
+<meta property="og:description" content="   Table 3: Glossary Week 1  Term  Description    analysis  A detailed evaluation of data to discover their structure and relevant information to answer a research question  categorical ...">
+<meta name="twitter:description" content="   Table 3: Glossary Week 1  Term  Description    analysis  A detailed evaluation of data to discover their structure and relevant information to answer a research question  categorical ...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -125,6 +125,8 @@
   </header><main class="col-sm-12 col-md-9 col-lg-7" id="content"><script src="sidebar-link.js"></script><div id="glossary" class="section level1 unnumbered">
 <h1>Glossary<a class="anchor" aria-label="anchor" href="#glossary"><i class="fas fa-link"></i></a>
 </h1>
+<p> </p>
+<div class="custom-html-table">
 <div class="inline-table"><table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table">
 <caption>
 <span id="tab:glossary1">Table 3: </span>Glossary Week 1
@@ -370,6 +372,8 @@ Is equal to the squared standard deviation
 </tr>
 </tbody>
 </table></div>
+</div>
+<p> </p>
 </div>
   <div class="chapter-nav">
 <div class="prev"><a href="homework-for-week-2.html">Homework for Week 2</a></div>
