--- a/model-fit-in-binary-response-models.html
+++ b/model-fit-in-binary-response-models.html
@@ -184,88 +184,45 @@ Figure 35: Shifting <span class="math inline">\(\tau\)</span>
 <p>These are only three options of placing the threshold. But we have a total of eight observations which means that there are nine potential positions for the cut-off point with each leading to a different conclusion of how well our model fits the observed data. Let’s go through this more systematically and start by placing <span class="math inline">\(\tau\)</span> at the very bottom. Because the number of TNs, TPs, FNs, and FPs will only change at the “next” observation we only need to shift as many times as there are observations. For each shift we record the values of all four quantities in a crosstabulation which is displayed in the following table:</p>
 <p> </p>
 <div class="top-bottom-rule-only">
-<div class="inline-table"><table style="border-collapse: collapse; width: auto; margin-left: auto; margin-right: auto;" class="table table-sm">
-<thead>
+<div class="inline-table"><table style="border-collapse: collapse; border-spacing: 0; margin: auto; text-align: center; font-size: 90%; width: 60%;" class="table table-sm"><thead>
 <tr>
-<th style="padding: 6px;">
+<th style="padding: 12px 4px;">
 </th>
-<th colspan="3" style="text-align: center; padding: 6px;">
+<th style="padding: 12px 4px;">
+</th>
+<th colspan="2" style="padding: 12px 4px;">
 <strong>Actual</strong>
 </th>
 </tr>
 <tr>
-<th style="padding: 6px;">
-</th>
-<th style="padding: 6px;">
-<strong>Democracy</strong>
-</th>
-<th style="padding: 6px;">
-</th>
-<th style="padding: 6px;">
-<strong>Dictatorship</strong>
-</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="padding: 6px;">
+<th rowspan="4" style="padding: 12px 4px; vertical-align: middle;">
 <strong>Predicted</strong>
-</td>
-<td style="padding: 6px;">
-</td>
-<td style="padding: 6px;">
-</td>
-<td style="padding: 6px;">
-</td>
-</tr>
-<tr>
-<td style="padding: 6px;">
+</th>
+<th rowspan="2" style="padding: 12px 4px; vertical-align: middle;">
 <strong>Democracy</strong>
+</th>
+<td style="padding: 12px 4px;">
+True<br>Positive
 </td>
-<td style="padding: 6px;">
-True Positive
-</td>
-<td style="padding: 6px;">
-</td>
-<td style="padding: 6px;">
-False Positive
+<td style="padding: 12px 4px;">
+False<br>Positive
 </td>
 </tr>
-<tr>
-<td style="padding: 6px;">
-</td>
-<td style="padding: 6px;">
-</td>
-<td style="padding: 6px;">
-</td>
-<td style="padding: 6px;">
-</td>
-</tr>
-<tr>
-<td style="padding: 6px;">
+<tr></tr>
+<!-- empty row for vertical spacing --><tr>
+<th rowspan="2" style="padding: 12px 4px; vertical-align: middle;">
 <strong>Dictatorship</strong>
+</th>
+<td style="padding: 12px 4px;">
+False<br>Negative
 </td>
-<td style="padding: 6px;">
-False Negative
-</td>
-<td style="padding: 6px;">
-</td>
-<td style="padding: 6px;">
-True Negative
+<td style="padding: 12px 4px;">
+True<br>Negative
 </td>
 </tr>
-<tr>
-<td style="padding: 6px;">
-</td>
-<td style="padding: 6px;">
-</td>
-<td style="padding: 6px;">
-</td>
-<td style="padding: 6px;">
-</td>
-</tr>
-</tbody>
-</table></div>
+<tr></tr>
+<!-- empty row for vertical spacing -->
+</thead></table></div>
 </div>
 <p> </p>
 <p>These tables are useful in their own right, but since we will end up with as many of them as there are observations, this can quickly get very messy. There are only eight observations here, but imagine doing these for the <code>world</code> data set with 190 observationsWe therefore need to find a way to condense the information contained in each of the n confusion matrices into a single measure. If you look closely, you will see that TNs and FPs form a close relationship: if we shift up <span class="math inline">\(\tau\)</span> in Figure <a href="model-fit-in-binary-response-models.html#fig:taushift">35</a> a) we are reducing the number of FPs and obtain more TNs. As TPs relate in the same way to FNs, we can quantify their respective relationships in the following rates:</p>
@@ -1035,8 +992,8 @@ Figure 37: ROC Curve
 
     <script>
 
-      function styleCell_3skt520i5bja4ufvh2qw(i, j, css_id) {
-          var table = document.getElementById("tinytable_3skt520i5bja4ufvh2qw");
+      function styleCell_wuibpr8237mti0m2qyaf(i, j, css_id) {
+          var table = document.getElementById("tinytable_wuibpr8237mti0m2qyaf");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1046,7 +1003,7 @@ Figure 37: ROC Curve
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_3skt520i5bja4ufvh2qw');
+        var table = document.getElementById('tinytable_wuibpr8237mti0m2qyaf');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -1054,8 +1011,8 @@ Figure 37: ROC Curve
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_3skt520i5bja4ufvh2qw(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_3skt520i5bja4ufvh2qw");
+      function spanCell_wuibpr8237mti0m2qyaf(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_wuibpr8237mti0m2qyaf");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -1085,48 +1042,48 @@ Figure 37: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 1, j: 4 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_zty0owuhp40d3o1yhdjv',}, 
-          { positions: [ { i: 0, j: 3 }, { i: 0, j: 2 }, { i: 0, j: 4 },  ], css_id: 'tinytable_css_5qj1nsxonnxpqolsagno',}, 
-          { positions: [ { i: 12, j: 1 }, { i: 12, j: 4 }, { i: 12, j: 2 }, { i: 12, j: 3 },  ], css_id: 'tinytable_css_ylrczoee643m9i83jo9e',}, 
-          { positions: [ { i: 10, j: 3 }, { i: 10, j: 2 }, { i: 10, j: 4 }, { i: 10, j: 1 },  ], css_id: 'tinytable_css_jxue4e090ajdern0fhcz',}, 
-          { positions: [ { i: 4, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 7, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 1 }, { i: 6, j: 1 }, { i: 11, j: 1 }, { i: 7, j: 2 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 11, j: 2 }, { i: 8, j: 2 }, { i: 9, j: 2 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 3, j: 3 }, { i: 4, j: 3 }, { i: 9, j: 3 }, { i: 5, j: 4 }, { i: 7, j: 3 }, { i: 8, j: 3 }, { i: 4, j: 4 }, { i: 9, j: 4 }, { i: 11, j: 3 }, { i: 3, j: 4 }, { i: 8, j: 4 }, { i: 6, j: 4 }, { i: 7, j: 4 }, { i: 11, j: 4 },  ], css_id: 'tinytable_css_cueosagsdehrtmq5vajy',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_xv5irndjb47cr7xa7324',}, 
-          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_auu6rbi99h8z6ws7xyy8',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 2, j: 2 }, { i: 2, j: 3 }, { i: 2, j: 4 },  ], css_id: 'tinytable_css_k0o20095d9afq43qcpuz',}, 
-          { positions: [ { i: 12, j: 0 },  ], css_id: 'tinytable_css_ge9ihu793p4zh1pohdmh',}, 
-          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_zkvey8rpwj7dhks2wr7q',}, 
-          { positions: [ { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 7, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 }, { i: 11, j: 0 },  ], css_id: 'tinytable_css_vmis86fsf3h7s36d8qlf',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_uct28uk598x5527bo61g',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_5ndpe5z03obdxqgtu167',}, 
-          { positions: [ { i: 2, j: 0 },  ], css_id: 'tinytable_css_3krj619mbjnj7lg00i6d',}, 
+          { positions: [ { i: 1, j: 4 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_n87niokxrccdfoob1k04',}, 
+          { positions: [ { i: 0, j: 3 }, { i: 0, j: 2 }, { i: 0, j: 4 },  ], css_id: 'tinytable_css_bv87h1kycx3hlel80yz7',}, 
+          { positions: [ { i: 12, j: 1 }, { i: 12, j: 4 }, { i: 12, j: 2 }, { i: 12, j: 3 },  ], css_id: 'tinytable_css_k8k7dkqy4tivvromla5o',}, 
+          { positions: [ { i: 10, j: 3 }, { i: 10, j: 2 }, { i: 10, j: 4 }, { i: 10, j: 1 },  ], css_id: 'tinytable_css_nx530fw44dy7ekhbzly5',}, 
+          { positions: [ { i: 4, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 7, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 1 }, { i: 6, j: 1 }, { i: 11, j: 1 }, { i: 7, j: 2 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 11, j: 2 }, { i: 8, j: 2 }, { i: 9, j: 2 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 3, j: 3 }, { i: 4, j: 3 }, { i: 9, j: 3 }, { i: 5, j: 4 }, { i: 7, j: 3 }, { i: 8, j: 3 }, { i: 4, j: 4 }, { i: 9, j: 4 }, { i: 11, j: 3 }, { i: 3, j: 4 }, { i: 8, j: 4 }, { i: 6, j: 4 }, { i: 7, j: 4 }, { i: 11, j: 4 },  ], css_id: 'tinytable_css_057ioy350u4lzszp2gp8',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_ghxnenk8auu6sm8gb76u',}, 
+          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_fclsio8uf5ahidoplm30',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 2, j: 2 }, { i: 2, j: 3 }, { i: 2, j: 4 },  ], css_id: 'tinytable_css_vgqmo07pbogi97k19w3n',}, 
+          { positions: [ { i: 12, j: 0 },  ], css_id: 'tinytable_css_4wb8gq3mcvz4q8h4zds9',}, 
+          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_840i2h6lu6gdklpiy12l',}, 
+          { positions: [ { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 7, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 }, { i: 11, j: 0 },  ], css_id: 'tinytable_css_0xxuq4ya11oue3a6asb4',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_q9982ag6wl4009s7kztz',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_b3zz3u6w1uvuaq68jfpk',}, 
+          { positions: [ { i: 2, j: 0 },  ], css_id: 'tinytable_css_6afwlc1zfyprjcnz2ydn',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_3skt520i5bja4ufvh2qw(cell.i, cell.j, group.css_id);
+                  styleCell_wuibpr8237mti0m2qyaf(cell.i, cell.j, group.css_id);
               });
           });
       });
     </script><style>
       /* tinytable css entries after */
-      .table td.tinytable_css_zty0owuhp40d3o1yhdjv, .table th.tinytable_css_zty0owuhp40d3o1yhdjv { text-align: center; text-align: center; }
-      .table td.tinytable_css_5qj1nsxonnxpqolsagno, .table th.tinytable_css_5qj1nsxonnxpqolsagno { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_ylrczoee643m9i83jo9e, .table th.tinytable_css_ylrczoee643m9i83jo9e { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_jxue4e090ajdern0fhcz, .table th.tinytable_css_jxue4e090ajdern0fhcz { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_cueosagsdehrtmq5vajy, .table th.tinytable_css_cueosagsdehrtmq5vajy { text-align: center; }
-      .table td.tinytable_css_xv5irndjb47cr7xa7324, .table th.tinytable_css_xv5irndjb47cr7xa7324 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_auu6rbi99h8z6ws7xyy8, .table th.tinytable_css_auu6rbi99h8z6ws7xyy8 { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_k0o20095d9afq43qcpuz, .table th.tinytable_css_k0o20095d9afq43qcpuz { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_ge9ihu793p4zh1pohdmh, .table th.tinytable_css_ge9ihu793p4zh1pohdmh { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_zkvey8rpwj7dhks2wr7q, .table th.tinytable_css_zkvey8rpwj7dhks2wr7q { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_vmis86fsf3h7s36d8qlf, .table th.tinytable_css_vmis86fsf3h7s36d8qlf { text-align: left; }
-      .table td.tinytable_css_uct28uk598x5527bo61g, .table th.tinytable_css_uct28uk598x5527bo61g { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_5ndpe5z03obdxqgtu167, .table th.tinytable_css_5ndpe5z03obdxqgtu167 { text-align: left; text-align: center; }
-      .table td.tinytable_css_3krj619mbjnj7lg00i6d, .table th.tinytable_css_3krj619mbjnj7lg00i6d { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_n87niokxrccdfoob1k04, .table th.tinytable_css_n87niokxrccdfoob1k04 { text-align: center; text-align: center; }
+      .table td.tinytable_css_bv87h1kycx3hlel80yz7, .table th.tinytable_css_bv87h1kycx3hlel80yz7 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_k8k7dkqy4tivvromla5o, .table th.tinytable_css_k8k7dkqy4tivvromla5o { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_nx530fw44dy7ekhbzly5, .table th.tinytable_css_nx530fw44dy7ekhbzly5 { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_057ioy350u4lzszp2gp8, .table th.tinytable_css_057ioy350u4lzszp2gp8 { text-align: center; }
+      .table td.tinytable_css_ghxnenk8auu6sm8gb76u, .table th.tinytable_css_ghxnenk8auu6sm8gb76u { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_fclsio8uf5ahidoplm30, .table th.tinytable_css_fclsio8uf5ahidoplm30 { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_vgqmo07pbogi97k19w3n, .table th.tinytable_css_vgqmo07pbogi97k19w3n { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_4wb8gq3mcvz4q8h4zds9, .table th.tinytable_css_4wb8gq3mcvz4q8h4zds9 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_840i2h6lu6gdklpiy12l, .table th.tinytable_css_840i2h6lu6gdklpiy12l { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_0xxuq4ya11oue3a6asb4, .table th.tinytable_css_0xxuq4ya11oue3a6asb4 { text-align: left; }
+      .table td.tinytable_css_q9982ag6wl4009s7kztz, .table th.tinytable_css_q9982ag6wl4009s7kztz { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_b3zz3u6w1uvuaq68jfpk, .table th.tinytable_css_b3zz3u6w1uvuaq68jfpk { text-align: left; text-align: center; }
+      .table td.tinytable_css_6afwlc1zfyprjcnz2ydn, .table th.tinytable_css_6afwlc1zfyprjcnz2ydn { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
 <div class="container">
-      <div class="inline-table"><table class="table table-borderless" id="tinytable_3skt520i5bja4ufvh2qw" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <div class="inline-table"><table class="table table-borderless" id="tinytable_wuibpr8237mti0m2qyaf" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
 <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
