--- a/homework-for-week-2.html
+++ b/homework-for-week-2.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 2 Work through the Section Principles of Statistical Inference before coming to the seminar next week...">
-<meta property="og:description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 2 Work through the Section Principles of Statistical Inference before coming to the seminar next week...">
-<meta name="twitter:description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 2 Work through the Section Principles of Statistical Inference before coming to the seminar next week...">
+<meta name="description" content="Students as Learners: Finish this week’s worksheet Catch up with the required literature for this week Read the required literature for Week 2 Work through the Section Principles of Statistical...">
+<meta property="og:description" content="Students as Learners: Finish this week’s worksheet Catch up with the required literature for this week Read the required literature for Week 2 Work through the Section Principles of Statistical...">
+<meta name="twitter:description" content="Students as Learners: Finish this week’s worksheet Catch up with the required literature for this week Read the required literature for Week 2 Work through the Section Principles of Statistical...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -127,15 +127,15 @@
 </h1>
 <p><strong>Students as Learners:</strong></p>
 <ul>
-<li>Finish this week’s worksheet</li>
-<li>Read the required literature for Week 2</li>
-<li>Work through the Section <a href="https://drfloreiche.github.io/PO33Q/principles-of-statistical-inference.html">Principles of Statistical Inference</a> before coming to the seminar next week</li>
+<li><p>Finish this week’s worksheet</p></li>
+<li><p>Catch up with the <a href="https://rl.talis.com/3/warwick/lists/E5FA4027-27A7-AFB0-AAF4-C891BCCD83E2.html#A818E504-61E9-8D51-7302-6A8066D63982">required literature for this week</a></p></li>
+<li><p>Read the <a href="https://rl.talis.com/3/warwick/lists/E5FA4027-27A7-AFB0-AAF4-C891BCCD83E2.html#0B69799C-BD38-F4E4-3D53-58E4021B223A">required literature for Week 2</a></p></li>
+<li><p>Work through the Section <a href="https://drfloreiche.github.io/PO33Q/principles-of-statistical-inference.html">Principles of Statistical Inference</a> before coming to the seminar next week</p></li>
 </ul>
 <p><strong>Students as Researchers:</strong></p>
 <ul>
 <li>nothing, yet</li>
 </ul>
-<hr>
 </div>
   <div class="chapter-nav">
 <div class="prev"><a href="introduction-to-r.html">Introduction to R</a></div>
