--- a/homework-for-week-3.html
+++ b/homework-for-week-3.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Students as Learners: Finish this week’s worksheet Read the required literature Students as Researchers: Choose a geographical region, or adopt a global focus Using literature, prepare a summary...">
-<meta property="og:description" content="Students as Learners: Finish this week’s worksheet Read the required literature Students as Researchers: Choose a geographical region, or adopt a global focus Using literature, prepare a summary...">
-<meta name="twitter:description" content="Students as Learners: Finish this week’s worksheet Read the required literature Students as Researchers: Choose a geographical region, or adopt a global focus Using literature, prepare a summary...">
+<meta name="description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 3 Students as Researchers: Choose a geographical region, or adopt a global focus Using literature, prepare...">
+<meta property="og:description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 3 Students as Researchers: Choose a geographical region, or adopt a global focus Using literature, prepare...">
+<meta name="twitter:description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 3 Students as Researchers: Choose a geographical region, or adopt a global focus Using literature, prepare...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -128,7 +128,8 @@
 <p><strong>Students as Learners:</strong></p>
 <ul>
 <li>Finish this week’s worksheet</li>
-<li>Read the required literature</li>
+<li>Read the <a href="https://rl.talis.com/3/warwick/lists/E5FA4027-27A7-AFB0-AAF4-C891BCCD83E2.html#2D4144BC-3D1D-6B65-FD54-248D4D342058">required literature for Week 3</a>
+</li>
 </ul>
 <p><strong>Students as Researchers:</strong></p>
 <ul>
