--- a/homework-for-week-4.html
+++ b/homework-for-week-4.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Students as Learners: Finish this week’s worksheet Read the required literature Students as Researchers: Prepare a short presentation (&lt; 3 mins.) on the research proposal to be submitted in Week...">
-<meta property="og:description" content="Students as Learners: Finish this week’s worksheet Read the required literature Students as Researchers: Prepare a short presentation (&lt; 3 mins.) on the research proposal to be submitted in Week...">
-<meta name="twitter:description" content="Students as Learners: Finish this week’s worksheet Read the required literature Students as Researchers: Prepare a short presentation (&lt; 3 mins.) on the research proposal to be submitted in Week...">
+<meta name="description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 4 Students as Researchers: Prepare a short presentation (&lt; 3 mins.) on the research proposal to be...">
+<meta property="og:description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 4 Students as Researchers: Prepare a short presentation (&lt; 3 mins.) on the research proposal to be...">
+<meta name="twitter:description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 4 Students as Researchers: Prepare a short presentation (&lt; 3 mins.) on the research proposal to be...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -128,7 +128,8 @@
 <p><strong>Students as Learners:</strong></p>
 <ul>
 <li>Finish this week’s worksheet</li>
-<li>Read the required literature</li>
+<li>Read the <a href="https://rl.talis.com/3/warwick/lists/E5FA4027-27A7-AFB0-AAF4-C891BCCD83E2.html#66C9B5CD-9980-CDF3-AF43-7A17CFA1856D">required literature for Week 4</a>
+</li>
 </ul>
 <p><strong>Students as Researchers:</strong></p>
 <ul>
