--- a/homework-for-week-7.html
+++ b/homework-for-week-7.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Students as Learners: Finish this week’s worksheet Use reading week to catch up on the readings of Weeks 1-5 Read the required literature for Week 7 (see Moodle/Talis) Students as Researchers:...">
-<meta property="og:description" content="Students as Learners: Finish this week’s worksheet Use reading week to catch up on the readings of Weeks 1-5 Read the required literature for Week 7 (see Moodle/Talis) Students as Researchers:...">
-<meta name="twitter:description" content="Students as Learners: Finish this week’s worksheet Use reading week to catch up on the readings of Weeks 1-5 Read the required literature for Week 7 (see Moodle/Talis) Students as Researchers:...">
+<meta name="description" content="Students as Learners: Finish this week’s worksheet Use reading week to catch up on the readings of Weeks 1-5 Read the required literature for Week 7 Students as Researchers: Revise the content of...">
+<meta property="og:description" content="Students as Learners: Finish this week’s worksheet Use reading week to catch up on the readings of Weeks 1-5 Read the required literature for Week 7 Students as Researchers: Revise the content of...">
+<meta name="twitter:description" content="Students as Learners: Finish this week’s worksheet Use reading week to catch up on the readings of Weeks 1-5 Read the required literature for Week 7 Students as Researchers: Revise the content of...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -129,7 +129,8 @@
 <ul>
 <li>Finish this week’s worksheet</li>
 <li>Use reading week to catch up on the readings of Weeks 1-5</li>
-<li>Read the required literature for Week 7 (see Moodle/Talis)</li>
+<li>Read the <a href="https://rl.talis.com/3/warwick/lists/E5FA4027-27A7-AFB0-AAF4-C891BCCD83E2.html#7C08DA63-F6CA-B2FC-4CB1-CA82B4182F36">required literature for Week 7</a>
+</li>
 </ul>
 <p><strong>Students as Researchers:</strong></p>
 <ul>
@@ -141,7 +142,6 @@
 </ul>
 </li>
 </ul>
-<hr>
 </div>
   <div class="chapter-nav">
 <div class="prev"><a href="exercises-1.html">Exercises</a></div>
