--- a/homework-for-week-8.html
+++ b/homework-for-week-8.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Students as Learners: Finish this week’s worksheet Read the required literature Students as Researchers: Choose the region for your summative assessment. Create an outline (A4, bullet points),...">
-<meta property="og:description" content="Students as Learners: Finish this week’s worksheet Read the required literature Students as Researchers: Choose the region for your summative assessment. Create an outline (A4, bullet points),...">
-<meta name="twitter:description" content="Students as Learners: Finish this week’s worksheet Read the required literature Students as Researchers: Choose the region for your summative assessment. Create an outline (A4, bullet points),...">
+<meta name="description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 8 Students as Researchers: Choose the region for your summative assessment. Create an outline (A4, bullet...">
+<meta property="og:description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 8 Students as Researchers: Choose the region for your summative assessment. Create an outline (A4, bullet...">
+<meta name="twitter:description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 8 Students as Researchers: Choose the region for your summative assessment. Create an outline (A4, bullet...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -128,7 +128,8 @@
 <p><strong>Students as Learners:</strong></p>
 <ul>
 <li>Finish this week’s worksheet</li>
-<li>Read the required literature</li>
+<li>Read the <a href="https://rl.talis.com/3/warwick/lists/E5FA4027-27A7-AFB0-AAF4-C891BCCD83E2.html#D3AE6FE6-BC94-45C6-68DA-576418AD3AC2">required literature for Week 8</a>
+</li>
 </ul>
 <p><strong>Students as Researchers:</strong></p>
 <ul>
