--- a/homework-for-week-5.html
+++ b/homework-for-week-5.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Students as Learners: Finish this week’s worksheet Read the required literature Students as Researchers: Finish the research proposal (formative assessment)">
-<meta property="og:description" content="Students as Learners: Finish this week’s worksheet Read the required literature Students as Researchers: Finish the research proposal (formative assessment)">
-<meta name="twitter:description" content="Students as Learners: Finish this week’s worksheet Read the required literature Students as Researchers: Finish the research proposal (formative assessment)">
+<meta name="description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 5 Students as Researchers: Finish the research proposal (formative assessment)">
+<meta property="og:description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 5 Students as Researchers: Finish the research proposal (formative assessment)">
+<meta name="twitter:description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 5 Students as Researchers: Finish the research proposal (formative assessment)">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -128,7 +128,8 @@
 <p><strong>Students as Learners:</strong></p>
 <ul>
 <li>Finish this week’s worksheet</li>
-<li>Read the required literature</li>
+<li>Read the <a href="https://rl.talis.com/3/warwick/lists/E5FA4027-27A7-AFB0-AAF4-C891BCCD83E2.html#57640F31-C616-61B2-3A11-F68B351CB1A5">required literature for Week 5</a>
+</li>
 </ul>
 <p><strong>Students as Researchers:</strong></p>
 <ul>
